--- a/Semana2.ipynb
+++ b/Semana2.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -148,7 +148,7 @@
        "1e-38"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,11 +294,11 @@
     "<br/>\n",
     "\n",
     "\n",
-    "```<expressão composta> ::=\n",
-    "    <operador> <expressão> |\n",
-    "    <operador> (<expressão>) |\n",
-    "    <expressão> <operador> <expressão> |\n",
-    "    (<expressão> <operador> <expressão>)```\n",
+    "```<composed expression> ::=\n",
+    "    <operator> <expression> |\n",
+    "    <operator> (<expression>) |\n",
+    "    <expression> <operator> <expression> |\n",
+    "    (<expression> <operator> <expression>)```\n",
     "    \n",
     "<br/>\n",
     "\n",
@@ -536,7 +536,7 @@
     "<br/>\n",
     "\n",
     "\n",
-    "<center>```<nome> ::= <nome simples> | <nome indexado> | <nome composto>```</center>\n",
+    "<center>```<nome> ::= <simple name> | <indexed name> | <composed name>```</center>\n",
     "\n"
    ]
   },
@@ -721,8 +721,8 @@
     "\n",
     "<br/>\n",
     "\n",
-    "<center>```<leitura de dados> ::= input() | input(<informação>)\n",
-    "<informação> ::= <cadeia de caracteres>```</center>"
+    "<center>```<input> ::= input() | input(<info>)\n",
+    "<info> ::= <chars>```</center>"
    ]
   },
   {
@@ -787,8 +787,8 @@
     "<br/>\n",
     "<br/>\n",
     "\n",
-    "<center>```<escrita de dados> ::= print() | print(<expressões>)\n",
-    "<expressões> ::= <expressão> | <expressão>, <expressões>```</center>"
+    "<center>```<output> ::= print() | print(<expressions>)\n",
+    "<expressions> ::= <expression> | <expression>, <expressions>```</center>"
    ]
   },
   {
