--- a/Semana6.ipynb
+++ b/Semana6.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -51,15 +51,14 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'proximo_termo' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-e08e50a12520>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresultado\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mproximo_termo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'proximo_termo' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "<function __main__.exponencial_aproximada>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -83,7 +82,8 @@
     "\n",
     "    return resultado\n",
     "\n",
-    "proximo_termo"
+    "exponencial_aproximada\n",
+    "#proximo_termo"
    ]
   },
   {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -356,7 +356,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -388,7 +388,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -484,6 +484,264 @@
     "    \n",
     "print(parse_expr(\"30+10\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Do you want to use non-ASCII characters? Put the following line in the first line of your .py file (it is a comment!)\n",
+    "# -*- coding: latin-1 -*-"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('A', 'S'), ('E', 'S'), ('O', 'S'))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def addS_nonrecursive(tuples):\n",
+    "    ret = ()\n",
+    "    for i in tuples:\n",
+    "        ret = ret + (i + ('S',),)\n",
+    "    return ret\n",
+    "\n",
+    "def addS_recursive(tuples):\n",
+    "    if tuples == ():\n",
+    "        return ()\n",
+    "    else:\n",
+    "        return (tuples[0] + ('S',),) + addS_recursive(tuples[1:])\n",
+    "\n",
+    "def add_listcomprehesion(tuples):\n",
+    "    return tuple([ i + ('S',) for i in tuples ])\n",
+    "\n",
+    "\n",
+    "a = (('A',), ('E',), ('O',))\n",
+    "add_listcomprehesion(a) #--> (('A', 'S'), ('E', 'S'), ('O', 'S'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 19 µs, sys: 1e+03 ns, total: 20 µs\n",
+      "Wall time: 23.1 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "93326215443944152681699238856266700490715968264381621468592963895217599993229915608941463976156518286253697920827223758251185210916864000000000000000000000000"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    res = 1\n",
+    "    for i in range(1,n+1):\n",
+    "        res = res * i\n",
+    "    return res\n",
+    "\n",
+    "%time factorial(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 93 µs, sys: 97 µs, total: 190 µs\n",
+      "Wall time: 195 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "93326215443944152681699238856266700490715968264381621468592963895217599993229915608941463976156518286253697920827223758251185210916864000000000000000000000000"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Exercise: recursive factorial!\n",
+    "def fact_rec(n):\n",
+    "    if n < 0 or not isinstance(n, int):\n",
+    "        raise ValueError(\"n negativo ou não inteiro!\")\n",
+    "    \n",
+    "    if 0 <= n <= 1:\n",
+    "        return 1\n",
+    "    \n",
+    "    return n * fact_rec(n - 1)\n",
+    "    \n",
+    "%time fact_rec(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Visualize  Executions\n",
+    "\n",
+    "Let's visualize what's going on with http://pythontutor.com/visualize.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Greatest Common Divisor (GCD)\n",
+    "\n",
+    "- GCD between a number and 0 is the number itself.\n",
+    "- When we divide a number by a smaller one, then the gcd between the remainder of the division and the divisor is the same as the gcd between the divisor and dividend.\n",
+    "\n",
+    "```\n",
+    "def mdc(m, n):\n",
+    "    while n != 0:\n",
+    "        m, n = n, m % n\n",
+    "    return m\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#gcd(m, n) = \n",
+    "#- m  if n = 0, \n",
+    "#- gcd(n, m % n) if n > 0\n",
+    "\n",
+    "def gcd(m, n):\n",
+    "    if n == 0:\n",
+    "        return m\n",
+    "    \n",
+    "    return gcd(n, m % n)\n",
+    "\n",
+    "gcd(24, 16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5, 2, 3)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# alisa(tuple), but now purely recursive\n",
+    "a = ((1,2), (3,4), (5, (2,3)))\n",
+    "# (1,2,3,4,5,2,3)\n",
+    "\n",
+    "def alisa(t):\n",
+    "    if t == ():\n",
+    "        return ()\n",
+    "    \n",
+    "    if not isinstance(t[0], tuple):\n",
+    "        return (t[0],) + alisa(t[1:])\n",
+    "        \n",
+    "    return alisa(t[0]) + alisa(t[1:])\n",
+    "    \n",
+    "alisa(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
